--- a/index.html
+++ b/index.html
@@ -9,9 +9,22 @@
     <title>Etch-A-Sketch</title>
   </head>
   <body>
-    <button id="btn">Start</button>
-    <button id="reset">Reset</button>
-    <div class="container"></div>
+    <div class="main">
+      <h1>Etch-A-Sketch</h1>
+      <div class="interaction">
+        <button id="btn">Start</button>
+        <button id="reset">Reset</button>
+        <button id="rainbow">Rainbow Mode</button>
+        <button id="color">Color Mode</button>
+        <button id="eraser">Eraser</button>
+        <form action="get">
+          <input id="size" type="range" value="16" min="2" max="64" />
+          <h3 class="size_value"></h3>
+          <input id="color_picker" type="color" />
+        </form>
+      </div>
+      <div class="container"></div>
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
