adding styles to buttons and changing selection steps to 5

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button id="color">Color Mode</button>
         <button id="eraser">Eraser</button>
         <form action="get">
-          <input id="size" type="range" value="16" min="2" max="64" />
+          <input id="size" type="range" step="5" value="15" min="5" max="65" />
           <h3 class="size_value"></h3>
           <input id="color_picker" type="color" />
         </form>
